<resources>
    <string name="app_name">ChatUp</string>
    <string name="btn_register">Register</string>
    <string name="reg_header">Register</string>
    <string name="reg_email">E-mail</string>
    <string name="reg_username">Username</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirm password</string>
    <string name="reg_male">Male</string>
    <string name="reg_female">Female</string>
    <string name="reg_date">Date of birth</string>
    <string name="reg_btnRegister">Register</string>
    <string name="reg_gender">Gender: </string>
    <string name="reg_number_picker">Date of Birth</string>
    <string name="reg_number_picker_day">Day</string>
    <string name="reg_number_picker_month">Month</string>
    <string name="reg_number_picker_year">Year</string>
    <string name="login_header">Login</string>
    <string name="login_password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="login_forgottenPassword">Forgot your password?</string>
    <string name="login_email">E-mail</string>
    <string name="forgot_naslov">Forgot your password</string>
    <string name="forgot_podnaslov">Tell us your email address and we will send you instructions on this email.</string>
    <string name="forgot_hint_unos">E-mail</string>
    <string name="forgot_button_send">Send</string>
    <string name="btn_login_admin_login">Admin Login</string>
    <string name="action_edit_profile">Edit profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for users</string>
    <string name="action_about_us">About us</string>
    <string name="action_logout">Logout</string>
    <string name="action_close_app">Close app</string>
    <string name="stringProfilePicture">profile picture</string>

    <string name="conversation_send">Send</string>
    <string name="conversation_picture">Picture</string>
    <string name="conversation_add_participant">Add participant</string>
    <string name="conversation_add_participant_OK">OK</string>
    <string name="conversation_add_participant_Cancel">Cancel</string>
    <string name="change_image">Change image</string>
    <string name="save_image">Save image</string>

    <string name="about_us_dialog_title">About us</string>
    <string name="about_us_dialog_text">Informations</string>
    <string name="about_us_sub1_text">App name: ChatUp</string>
    <string name="about_us_sub2_text">App version: 1.0.0. </string>
    <string name="about_us_sub3_text">Date released: 29.1.2016</string>
    <string name="about_us_sub4_text">Team name: T18</string>
    <string name="about_us_sub5_text">Developers: Goran Drmencic, Danijel Filipovic, Matija Jurman, Danijel Sokac</string>
    <string name="about_us_sub6_text">Menthor: Ivan Svogor mag.inf.</string>
    <string name="about_us_sub7_text">All rights reserved</string>
    <string name="about_us_btnClose">Close</string>

    <string name="btnEditPicture">Upload new</string>
    <string name="btnEditSave">Save changes</string>
    <string name="EditInstructions">Edit your profile </string>
    <string name="SettingsInstructions">Your settings</string>
    <string name="SettingsColorInstructions">App color:</string>
    <string name="add_friend_add">Add</string>
    <string name="add_friend_cancel">Cancel</string>

    <string name="friend_menu">Friend menu</string>
    <string name="conv_start">Start conversation</string>
    <string name="crop_image">Crop image</string>
    <string name="pick_a_photo_hint">Choose image to display</string>

    <string name="dialog_noselection_title">Empty selection</string>
    <string name="dialog_noselection_participants">There are no selected users to add to the converation.</string>
    <string name="ConversationDialogTitle">Warning</string>
    <string name="ConversationDialogContent">You can not send EMPTY message.</string>
    <string name="ConversationDialogButtonText">OK</string>
    <string name="ForgotPassDialogContent">"E-mail has been sent to "</string>
    <string name="ForgotPassEmptyDialogContent">E-mail is required!</string>
    <string name="ForgotPassDialogTitle">Success</string>
    <string name="SearchOptionHeadingText">Search by</string>
    <string name="SettingsRadioEmail">E-mail</string>
    <string name="SettingsRadioUsername">Username</string>
    <string name="SettingsSearch">ChatUP_SearchBy</string>
    <string name="SettingsColor">ChatUP_Color</string>
    <string name="SettingsColorPink">Pink</string>
    <string name="SettingsColorBlack">Black</string>
    <string name="SettingsColorBlue">Blue</string>

</resources>
