<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="hr.foi.air.discountlocator.MainActivity">

        <item
            android:id="@+id/action_edit_profile"
            android:orderInCategory="96"
            app:showAsAction="never"
            android:title="@string/action_edit_profile"/>

        <item
            android:id="@+id/action_home"
            android:orderInCategory="97"
            app:showAsAction="never"
            android:title="@string/action_home"/>

        <item
            android:id="@+id/action_about_us"
            android:orderInCategory="98"
            app:showAsAction="never"
            android:title="@string/action_about_us"/>

        <item
            android:id="@+id/action_logout"
            android:orderInCategory="99"
            app:showAsAction="never"
            android:title="@string/action_logout"/>

        <item
            android:id="@+id/action_close_app"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:title="@string/action_close_app"/>
    </menu>