<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/about_us_sub1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_sub1_text"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/about_us_sub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_sub2_text"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/about_us_sub3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_sub3_text"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/about_us_sub4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_sub4_text"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/about_us_sub5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_sub5_text"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/about_us_sub6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_sub6_text"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnAboutUsClose"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/about_us_sub7"
        android:text="@string/about_us_btnClose" />

</LinearLayout>