<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorLightGrey"
    tools:context="hr.foi.air.t18.chatup.LoginActivity">

    <TextView
        android:id="@+id/loginNaslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/font_22" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/loginEmail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/login_email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPassword"
        android:layout_below="@+id/loginEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/login_password"/>

    <Button
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/btn_login"
        android:id="@+id/loginLoginButton"
        android:layout_below="@+id/loginPassword"
        android:layout_alignLeft="@+id/loginPassword"
        android:layout_alignStart="@+id/loginPassword"
        android:layout_marginTop="54dp" />

    <Button
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/reg_btnRegister"
        android:id="@+id/loginRegisterButton"
        android:background="@drawable/button_shape"
        android:layout_alignTop="@+id/loginLoginButton"
        android:layout_alignRight="@+id/loginPassword"
        android:layout_alignEnd="@+id/loginPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_forgottenPassword"
        android:id="@+id/loginForgottenPassword"
        android:layout_alignRight="@+id/loginPassword"
        android:layout_alignEnd="@+id/loginPassword"
        android:layout_below="@+id/loginPassword"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/btn_login_admin_login"
        android:id="@+id/loginAdminLoginButton"
        android:layout_below="@+id/loginRegisterButton"
        android:layout_marginTop="15dp"/>

</RelativeLayout>
