<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background_blue"
    tools:context=".Login.LoginActivity">

    <TextView
        android:id="@+id/forgotNaslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_naslov"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/font_22" />

    <TextView
        android:id="@+id/forgotPodnaslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_podnaslov"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/forgotNaslov"
        android:textSize="@dimen/font_16"
        android:layout_marginTop="16dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/forgotUnos"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/forgotPodnaslov"
        android:hint="@string/forgot_hint_unos"
        android:layout_marginTop="24dp"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/forgot_button_send"
        android:id="@+id/forgotSendButton"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/forgotUnos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

</RelativeLayout>
