<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/SettingsInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:text="@string/SettingsInstructions"/>

    <TextView
        android:id="@+id/SettingsColorInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SettingsInstructions"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_centerHorizontal="true"
        android:text="@string/SettingsColorInstructions"/>
    <RadioGroup
        android:id="@+id/SettingsColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SettingsColorInstructions"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radioBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Blue" />

        <RadioButton
            android:id="@+id/radioDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dark" />

        <RadioButton
            android:id="@+id/radioWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="White"
            android:checked = "true"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnSettingsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SettingsColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/btnEditSave" />

</RelativeLayout>
