<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:orientation="vertical"
        android:background="@drawable/login_background_blue">

        <TextView
            android:id="@+id/regNaslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/reg_header"
            android:textSize="@dimen/font_22" />

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regNaslov"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="Enter email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/regUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regEmail"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="Enter username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regUsername"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="Enter password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/regPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regPassword"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="Confirm password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/regGenderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regPassword2"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="7dp"
            android:text="@string/reg_gender"
            android:textSize="@dimen/font_16"
            android:layout_marginLeft="90dp"/>

        <RadioGroup
            android:id="@+id/regRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regPassword2"
            android:layout_centerHorizontal="true" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/reg_male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_female" />
        </RadioGroup>

        <TextView
            android:id="@+id/regDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regRadioGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/reg_date"
            android:textSize="@dimen/font_16"/>

        <!--
        <NumberPicker
            android:id="@+id/regNumberPicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regDate"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="7dp"
            android:text="@string/reg_btnRegister"
            android:layout_marginLeft="80dp"
            />

        <NumberPicker
            android:id="@+id/regNumberPicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regDate"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="7dp"
            android:text="@string/reg_btnRegister"
            android:layout_marginLeft="150dp"
            />

        <NumberPicker
            android:id="@+id/regNumberPicker3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regDate"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="7dp"
            android:text="@string/reg_btnRegister"
            android:layout_marginLeft="220dp"
            />

        <TextView
            android:id="@+id/regNumberPicker1LabelDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regNumberPicker1"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="7dp"
            android:text="@string/reg_number_picker_day"
            android:textSize="@dimen/font_16"
            android:layout_marginLeft="90dp"/>

        <TextView
            android:id="@+id/regNumberPicker1LabelMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regNumberPicker1"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="7dp"
            android:text="@string/reg_number_picker_month"
            android:textSize="@dimen/font_16"
            android:layout_marginLeft="160dp"/>

        <TextView
            android:id="@+id/regNumberPicker1LabelYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regNumberPicker1"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="7dp"
            android:text="@string/reg_number_picker_year"
            android:textSize="@dimen/font_16"
            android:layout_marginLeft="230dp"/>
        -->

        <DatePicker
            android:id="@+id/regDatePicker"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:layout_below="@id/regDate"
            android:datePickerMode="spinner"
            />

        <Button
            android:id="@+id/btnRegOk"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_below="@id/regDatePicker"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_shape"
            android:text="@string/reg_btnRegister" />
    </RelativeLayout>
</ScrollView>